--- a/fa2024/lectures/assets/lectures.scss
+++ b/fa2024/lectures/assets/lectures.scss
@@ -82,6 +82,11 @@ figcaption {
   margin-bottom: 0.125em !important;
 }
 
+.reveal .slide ul li p {
+  margin-top: 0.25em !important;
+  margin-bottom: 0.050em !important;
+}
+
 .reveal .slide .column p {
   margin-top: 0.1em;
   margin-bottom: 0.4em;
