--- a/fa2024/lectures/assets/lectures.scss
+++ b/fa2024/lectures/assets/lectures.scss
@@ -82,11 +82,6 @@ figcaption {
   margin-bottom: 0.125em !important;
 }
 
-.reveal .slide ul li p {
-  margin-top: 0.25em !important;
-  margin-bottom: 0.050em !important;
-}
-
 .reveal .slide .column p {
   margin-top: 0.1em;
   margin-bottom: 0.4em;
@@ -108,8 +103,14 @@ figcaption {
   margin-top: 1em;
 }
 
-.reveal .slide .column h3 {
+.reveal .slide .columns .column h3 {
   margin-top: 0em;
+  margin-bottom: 0em;
+}
+
+.reveal .slide .columns .column ul li p {
+  margin-top: 0.0em !important;
+  margin-bottom: 0.0em !important;
 }
 
 .reveal .slide .more-separation ul > li {
